Test suite for .caret